--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://chemcoder.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Lateral Diffusion  
+subtitle: My adventures in engineering and programming.
+author: Vijayendra S.
 simple_search: http://google.com/search
-description:
+description: A blog on scripting languages and chemical engineering
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
